--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,15 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.22.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.22.0</version>
+        </dependency>
     </dependencies>
 </project>
